--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "scripts": {
         "install": "npm install express http path",
-        "start": "python host.py"
+        "start": "node index.js"
     }
 }
